force-app/main/default/objects/License_Registration__c/fields/Internal_Fee_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Internal_Fee_Calculated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box is checked when internal DIR users first set status to pending payment. Set by Registration Process Builder.</description>
    <label>Internal Fee Calculated?</label>
    <type>Checkbox</type>
</CustomField>