force-app/main/default/objects/License_Registration__c/fields/Iron_Worker__c.field-meta.xml
<CustomField>
    <fullName>Iron_Worker__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Iron Worker</label>
    <type>Checkbox</type>
</CustomField>