force-app/main/default/objects/License_Registration__c/fields/Is_FLC_Filing_Fee_Due__c.field-meta.xml
<CustomField>
    <fullName>Is_FLC_Filing_Fee_Due__c</fullName>
    <formula>If(Expiration_Date__c - Today() &lt;60,1,if(ISPICKVAL(Service_Type__c,'New'),1,0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is FLC Filing Fee Due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>