force-app/main/default/objects/License_Registration__c/fields/isExamFeeReady__c.field-meta.xml
<CustomField>
    <fullName>isExamFeeReady__c</fullName>
    <description>Used to calculate if the exam fee should be added to the registration.
If the registration is within 90 days of renewal and the exam has already expired, add the exam fee to the renewal.  Registration renewal is every year.  Exam renewal is every 2 years.</description>
    <formula>/*Check if renewal is within 90 days and the Exam has expired
Exam_Expiration_Date__c is a roll-up from registration education, the min date of a passed exam
*/

IF(
   IF(ISBLANK(Expiration_Date__c), 0, IF( Expiration_Date__c - 90 &gt;= Today(), 0, 1)) == 1 &amp;&amp;
   IF(ISBLANK(Exam_Expiration_Date__c ), 0, IF(Exam_Expiration_Date__c &gt; Today() , 0, 1)) == 1
 , 1, 0)</formula>
    <label>isExamFeeReady</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>