force-app/main/default/objects/License_Registration__c/fields/isTempRegistration__c.field-meta.xml
<CustomField>
    <fullName>isTempRegistration__c</fullName>
    <description>Used by Registration Fee Schedules to calculate fees for TEWP</description>
    <formula>if(ISPICKVAL(Registration_Duration__c, "10 Days - Temporary Permit"), 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isTempRegistration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>