force-app/main/default/objects/License_Registration__c/fields/Lapse_in_Registration_Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>Lapse_in_Registration_Grace_Period__c</fullName>
    <label>Lapse in Registration Grace Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>