force-app/main/default/objects/License_Registration__c/fields/Last_Exam_Passed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Exam_Passed_Date__c</fullName>
    <description>to calculate FLC exam fee</description>
    <label>Last Exam Passed Date</label>
    <summarizedField>Ownership__c.Last_Exam_Passed_Date__c</summarizedField>
    <summaryForeignKey>Ownership__c.Registration__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>