force-app/main/default/objects/License_Registration__c/fields/Last_Verification_Business__c.field-meta.xml
<CustomField>
    <fullName>Last_Verification_Business__c</fullName>
    <label>Last Verification Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>