force-app/main/default/objects/License_Registration__c/fields/Last_Verification_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Verification_Date_Time__c</fullName>
    <label>Last Verification Date Time</label>
    <type>DateTime</type>
</CustomField>