force-app/main/default/objects/License_Registration__c/fields/Last_Verification_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Verification_Email__c</fullName>
    <label>Last Verification Email</label>
    <type>Email</type>
</CustomField>