force-app/main/default/objects/License_Registration__c/fields/Last_Verification_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Verification_Number__c</fullName>
    <label>Last Verification Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>