force-app/main/default/objects/License_Registration__c/fields/Latest_Exam_Passed_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Exam_Passed_Date__c</fullName>
    <description>Updated from Registrations Exams object</description>
    <label>Latest Exam Passed Date</label>
    <type>Date</type>
</CustomField>