force-app/main/default/objects/License_Registration__c/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <inlineHelpText>Please enter name registered with CA Secretary of State.  For Sole Proprietor enter full legal name.</inlineHelpText>
    <label>Legal Entity Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>