force-app/main/default/objects/License_Registration__c/fields/License_Revocation_Hearing_Date__c.field-meta.xml
<CustomField>
    <fullName>License_Revocation_Hearing_Date__c</fullName>
    <description>If this license was a part of a revocation hearing, the date for the hearing should be populated here manually.</description>
    <inlineHelpText>If this license was a part of a revocation hearing, enter the date of the hearing here.</inlineHelpText>
    <label>License Revocation Hearing Date</label>
    <type>Date</type>
</CustomField>