force-app/main/default/objects/License_Registration__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <label>License Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSLB</fullName>
            </value>
            <value>
                <fullName>Surveyor</fullName>
            </value>
            <value>
                <fullName>PUC</fullName>
            </value>
            <value>
                <fullName>Special Inspector</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None Required</fullName>
            </value>
            <value>
                <fullName>Plumbing Solutions</fullName>
                <isActive>false</isActive>
                <label>Plumbing Solutions</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>