force-app/main/default/objects/License_Registration__c/fields/Marble_Mason_Finisher__c.field-meta.xml
<CustomField>
    <fullName>Marble_Mason_Finisher__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PW craft</description>
    <label>Marble Mason/Finisher</label>
    <type>Checkbox</type>
</CustomField>