force-app/main/default/objects/License_Registration__c/fields/MedicalInformationDA__c.field-meta.xml
<CustomField>
    <fullName>MedicalInformationDA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Information DA</label>
    <type>Checkbox</type>
</CustomField>