force-app/main/default/objects/License_Registration__c/fields/MedicalInformationReviewed__c.field-meta.xml
<CustomField>
    <fullName>MedicalInformationReviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Medical Information  Reviewed?</label>
    <type>Checkbox</type>
</CustomField>