force-app/main/default/objects/License_Registration__c/fields/Minor_13_5_Years_Stop_Sign__c.field-meta.xml
<CustomField>
    <fullName>Minor_13_5_Years_Stop_Sign__c</fullName>
    <formula>IF(ADDMONTHS(Birth_Date__c,162) &lt;= Today(), IMAGE("/servlet/servlet.FileDownload?file=015d000000BD3Vr", "Collections Hold - Stop!", 25, 25), 'FALSE')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Minor 13.5 Years Stop Sign</label>
    <type>Text</type>
</CustomField>