force-app/main/default/objects/License_Registration__c/fields/Natural_Eye_Color__c.field-meta.xml
<CustomField>
    <fullName>Natural_Eye_Color__c</fullName>
    <label>Natural Eye Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Gray</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Hazel</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>-Select Eye Color-</fullName>
                <isActive>false</isActive>
                <label>-Select Eye Color-</label>
            </value>
            <value>
                <fullName>No eyes</fullName>
                <isActive>false</isActive>
                <label>No eyes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>