force-app/main/default/objects/License_Registration__c/fields/Natural_Hair_Color__c.field-meta.xml
<CustomField>
    <fullName>Natural_Hair_Color__c</fullName>
    <label>Natural Hair Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-Select Hair Color-</fullName>
                <default>true</default>
                <label>-Select Hair Color-</label>
            </value>
            <value>
                <fullName>Auburn</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Blond</fullName>
            </value>
            <value>
                <fullName>Brown</fullName>
            </value>
            <value>
                <fullName>Chestnut</fullName>
            </value>
            <value>
                <fullName>No Hair</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Strawberry Blond</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>