force-app/main/default/objects/License_Registration__c/fields/Need_to_assign_agent_s__c.field-meta.xml
<CustomField>
    <fullName>Need_to_assign_agent_s__c</fullName>
    <description>Do you have an agent/representative designated to speak on your behalf?</description>
    <label>Need to assign agent(s)?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>