force-app/main/default/objects/License_Registration__c/fields/No_of_Years__c.field-meta.xml
<CustomField>
    <fullName>No_of_Years__c</fullName>
    <formula>IF(ISPICKVAL(Registration_Period_July1__c,""),
Case( Registration_Period__c,
"1",1,
"2",2,
"3",3,
0),
CASE(Registration_Period_July1__c,
"1",1,
"2",2,
0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No of Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>