force-app/main/default/objects/License_Registration__c/fields/Number_of_Company_Accounts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Company_Accounts__c</fullName>
    <description>Populated via DLRS</description>
    <label>Number of Company Accounts</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>