force-app/main/default/objects/License_Registration__c/fields/Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees__c</fullName>
    <description>Garment - Count of all employees for all locations</description>
    <label>Number of Employees</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>