force-app/main/default/objects/License_Registration__c/fields/Number_of_Employees_Used__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Employees_Used__c</fullName>
    <label>Number of Employees Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>