force-app/main/default/objects/License_Registration__c/fields/Number_of_Exam_Takers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Exam_Takers__c</fullName>
    <description>Used to calculate the fees based on the number of testers who will be taking the exam</description>
    <label>Number of Exam Takers</label>
    <summaryForeignKey>Registration_Education__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>