force-app/main/default/objects/License_Registration__c/fields/Number_of_Follow_Up_Qs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Follow_Up_Qs__c</fullName>
    <label>Number of Follow Up Qs</label>
    <summaryForeignKey>Follow_Up_Question__c.Registration_Question_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>