force-app/main/default/objects/License_Registration__c/fields/Number_of_Follow_Up_Qs_Answered_1__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Follow_Up_Qs_Answered_1__c</fullName>
    <label>Number of Follow Up Qs Answered</label>
    <summaryFilterItems>
        <field>Follow_Up_Question__c.Answered__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Follow_Up_Question__c.Registration_Question_ID__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>