force-app/main/default/objects/License_Registration__c/fields/Number_of_Invalid_Business_Licenses__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Invalid_Business_Licenses__c</fullName>
    <description>Populated via DLRS from Registration Locations.</description>
    <label>Number of Invalid Business Licenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>