force-app/main/default/objects/License_Registration__c/fields/Number_of_Permit_Individual__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Permit_Individual__c</fullName>
    <description>Count number of applicant per permit, used in validation to limit applicant number to 1.</description>
    <label>Number of Permit Individual</label>
    <summaryFilterItems>
        <field>Registration_Account__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Individual Permit</value>
    </summaryFilterItems>
    <summaryForeignKey>Registration_Account__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>