force-app/main/default/objects/License_Registration__c/fields/Number_of_Registration_Exams__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Registration_Exams__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of exams for Registrations Owners and Managers</description>
    <label>Number of Registration Exams</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>