force-app/main/default/objects/License_Registration__c/fields/Number_of_Rejection_Defects__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rejection_Defects__c</fullName>
    <label>Number of Rejection Defects</label>
    <summaryForeignKey>Rejection_Defect__c.Registration__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>